--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="top_section">
-        <h1 class="refesh">Refresh Me</h1>
+        <h1 class="refesh">Refresh Me...</h1>
     </section>
     <section class="midd_section">
         <div class="row">
