--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <section class="top_section">
-        <h1 class="refesh">Refresh Me.....</h1>
+        <h1 class="refesh">Refresh Me.</h1>
     </section>
     <section class="midd_section">
         <div class="row">
             <div class="col-lg-6">
-               <h3 style="font-size: 4rem;">Player 1</h3>
+               <h3 style="font-size: 4rem;">Player 45</h3>
                <img class="qq" src="images/dice1.png" alt="">
             </div>
             <div class="col-lg-6" >
